<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app1:cardCornerRadius="16dp"
        app1:cardElevation="8dp"
        app1:layout_constraintBottom_toBottomOf="parent"
        app1:layout_constraintDimensionRatio="16:9"
        app1:layout_constraintEnd_toEndOf="parent"
        app1:layout_constraintStart_toStartOf="parent"
        app1:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/card_name"
                android:textStyle="bold"
                app1:layout_constraintStart_toStartOf="parent"
                app1:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/telefone"
                app1:layout_constraintStart_toStartOf="parent"
                app1:layout_constraintTop_toBottomOf="@id/title_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/email"
                app1:layout_constraintStart_toStartOf="parent"
                app1:layout_constraintTop_toBottomOf="@id/title_telefone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/empresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_empresa"
                app1:layout_constraintBottom_toBottomOf="parent"
                app1:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>